# sni-spoofing-rust

./: CLAUDE.md  Cargo.toml  README.md  config.json
.github/workflows/: release.yml
docs/issues/: 001-relay-drops-data-on-half-close.md  002-connection-leak-on-handler-timeout.md  003-unaligned-pointer-cast-bpf-header.md  004-thread-sleep-blocks-all-connections.md  005-fragile-sync-async-bridge.md  006-sniffer-busy-poll-loop.md  007-silent-failure-when-sniffer-dies.md  008-bpf-filter-no-ip-filtering.md  009-crate-wide-allow-dead-code.md  010-unsafe-blocks-without-safety-comments.md  011-hashmap-unit-value-instead-of-hashset.md  012-panics-in-non-test-code.md  013-tls-template-decoded-at-runtime.md  014-hand-rolled-hex-decoder.md  015-checksum-utility-in-wrong-module.md  016-parse-sni-hardcodes-offsets.md  017-windivert-packet-new-unvalidated-bytes.md  018-bpf-send-frame-mac-assumption.md  019-no-cleanup-on-sniffer-shutdown.md  020-relaxed-ordering-on-stop-flag.md  021-linux-send-hardcodes-eth-p-ip.md  022-no-sni-hostname-validation.md
src/: config.rs  error.rs  handler.rs  listener.rs  main.rs  proto.rs  relay.rs  shutdown.rs
src/packet/: eth.rs  ipv4.rs  ipv6.rs  mod.rs  tcp.rs  tls.rs
src/sniffer/: linux.rs  macos.rs  mod.rs  windows.rs
