[package]
name = "sni-spoof-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
socket2 = "0.5"
libc = "0.2"
nix = { version = "0.29", features = ["net", "ioctl"] }
tokio-util = "0.7"
rand = "0.8"
